# homely

.devcontainer/: devcontainer.json
.devcontainer/scripts/: postCreateCommand.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  story_ticket.md
.github/workflows/: api-test-lint.yml  app-test-lint.yml  python-test-lint.yml
api/: pyproject.toml
api/api/: main.py  settings.py  test_main.py  urls.py
api/authentication/: admin.py  backends.py  models.py  serializers.py  views.py
api/authentication/migrations/: 0001_initial.py  0002_user_bookmarked_spaces.py  0003_remove_user_bookmarked_spaces.py  0004_user_default_space.py
api/links/: admin.py  models.py  serializers.py  utils.py  views.py
api/links/migrations/: 0001_initial.py
api/spaces/: admin.py  choices.py  models.py  seralizers.py  views.py
api/spaces/migrations/: 0001_initial.py  0002_remove_widget_link.py  0003_alter_widget_widget_type.py  0004_widget_card_style.py  0005_alter_widget_card_style.py  0006_alter_widget_widget_type.py  0007_widget_link.py  0008_space_access.py  0009_alter_space_access.py  0010_space_is_homepage.py  0011_space_bookmarked_by.py  0012_space_description_alter_space_owner.py  0013_space_cloned_from.py
app/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vitest.config.ts
app/src/: App.vue  main.ts
app/src/api/: fonts.ts  index.ts  links.ts  location.ts  space.ts  user.ts  weather.ts  widget.ts
app/src/assets/: main.css
app/src/components/: GooglePlaceInput.vue  GridStack.vue  GridStackItem.vue  HomelyLogo.vue  ModalLayout.vue  SpaceBackground.vue  SpaceGrid.vue  SpaceHeader.vue  SpaceLayout.vue  SpaceMain.vue  SpaceMenu.vue  SpaceMenuBtn.vue  SpaceMoveable.vue  SpaceSettings.vue  SpaceSidebar.vue  SpaceWidget.vue  SpaceWidgetAddBtn.vue  SpaceWidgetGlobalSettings.vue  SpaceWidgetMenu.vue  SpaceWidgetSettings.vue
app/src/constants/: theme.ts  themes.ts  ui.ts  widget.ts
app/src/enums/: space.ts  widget.ts
app/src/router/: index.ts
app/src/stores/: datetime.ts  editors.ts  fonts.ts  location.ts  space.ts  theme.ts  ui.ts  user.ts  (+2 more)
(+87 files in other folders)
