[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Thalida Noel <hello@thalida.com>"]
readme = "README.md"

[tool.poetry.scripts]
start = "api.main:start"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pylint = "^2.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
