[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Thalida Noel <hello@thalida.com>"]
readme = "README.md"
packages = [
  { include = "api" },
]

[tool.poetry.scripts]
start = "api.main:start"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
requests = "^2.30.0"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.3"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
